Merubah navbar brand

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,13 @@ html {
 	scroll-behavior: smooth;
 }
 
+span {
+	background-color: black;
+	color: white;
+	padding-right: 2px;
+	border-radius: 10%;
+}
+
 .navbar {
 	position: relative;
 	z-index: 1;
